jilles      2007/05/22 22:30:16 UTC	(20070522-8313)
  Log:
  anope_convert:
  - fix enc_old passwords with anope 1.7.18
  - default to 1.7.x instead of 1.6.x
  

  Changes:	Modified:
  +14 -1	trunk/contrib/anope_convert.c (File Modified) 


jilles      2007/05/22 22:02:34 UTC	(20070522-8311)
  Log:
  Convert theia extendchans flag.
  

  Changes:	Modified:
  +2 -0		trunk/contrib/hybservtoatheme.pl (File Modified) 


nenolod     2007/05/22 20:37:44 UTC	(20070522-8309)
  Log:
  - clarify that we are looking for a registered account, not just any nickname. 
  

  Changes:	Modified:
  +1 -1		trunk/modules/chanserv/xop.c (File Modified) 


jilles      2007/05/21 22:51:44 UTC	(20070521-8307)
  Log:
  chanserv xop: use get_template_flags() instead of
  accessing chansvs.ca_*op directly
  

  Changes:	Modified:
  +30 -20	trunk/modules/chanserv/xop.c (File Modified) 


nenolod     2007/05/21 17:28:01 UTC	(20070521-8305)
  Log:
  - note that services no longer supports postgresql due to lack of time 
  to fix it.
  

  Changes:	Modified:
  +10 -0	trunk/doc/SQL (File Modified) 


jilles      2007/05/20 13:27:40 UTC	(20070520-8303)
  Log:
  Fix assertion failure when shutting down while not connected.
  

  Changes:	Modified:
  +2 -1		trunk/src/atheme.c (File Modified) 


jilles      2007/05/20 13:22:15 UTC	(20070520-8301)
  Log:
  Fix up +e/+r on group/ungroup.
  

  Changes:	Modified:
  +23 -0	trunk/modules/protocol/bahamut.c (File Modified) 
  +23 -0	trunk/modules/protocol/dreamforge.c (File Modified) 
  +23 -0	trunk/modules/protocol/hyperion.c (File Modified) 
  +23 -0	trunk/modules/protocol/officeirc.c (File Modified) 
  +23 -0	trunk/modules/protocol/plexus.c (File Modified) 
  +23 -0	trunk/modules/protocol/ptlink.c (File Modified) 
  +23 -0	trunk/modules/protocol/shadowircd.c (File Modified) 
  +23 -0	trunk/modules/protocol/solidircd.c (File Modified) 
  +23 -0	trunk/modules/protocol/ultimate3.c (File Modified) 
  +23 -0	trunk/modules/protocol/unreal.c (File Modified) 

